# Hack3

./: README.md  core.html  core.html.md  create_notebook.py  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml  specification.md  test_simple_query.py
Hack3/: _modidx.py  core.py  remediator.py
nbs/: 00_core.ipynb  01_remediator.ipynb  index.ipynb  nbdev.yml
