[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "Hack3"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "isc-ryoung", email = "rupert.young@intersystems.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/isc-ryoung/Hack3"
Documentation = "https://isc-ryoung.github.io/Hack3/"

[project.entry-points.nbdev]
Hack3 = "Hack3._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "Hack3.__version__"}

[tool.setuptools.packages.find]
include = ["Hack3"]

[tool.nbdev]
